--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
             background-color: #1a1a1a;
         }
 
+        #lossDisplay {
+            position: absolute;
+            top: 20px; /* Adjust positioning relative to the neural network diagram */
+            right: 20px; /* Adjust positioning relative to the neural network diagram */
+            z-index: 10;
+            background-color: transparent; /* Make the background transparent */
+            border: 2px solid white; /* Add a white outline */
+            padding: 20px; /* Increase padding for a bigger box */
+            border-radius: 8px;
+            color: #ffffff;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center; /* Center the text within the box */
+            pointer-events: none; /* Ensure the box doesn't interfere with interactions */
+        }
+
         circle {
             stroke: #ddd;
             fill: none;
@@ -62,13 +78,16 @@
         <input type="number" id="epochs" value="1000" min="1">
 
         <label for="learningRate">Learning Rate:</label>
-        <input type="number" id="learningRate" value="0.01" step="0.001" min="0.001"> <!-- Learning Rate Input -->
+        <input type="number" id="learningRate" value="0.01" step="0.001" min="0.001">
 
         <button id="loadNetworkBtn">Load Neural Network</button>
         <button id="trainNetworkBtn">Train Neural Network</button>
         <button id="stopTrainingBtn">Stop Training</button>
     </div>
+
     <div id="visualization"></div>
+    <div id="lossDisplay">Loss: N/A</div> <!-- Loss display box -->
+
     <script>
         let stopTraining = false;
 
@@ -84,7 +103,7 @@
         document.getElementById('trainNetworkBtn').addEventListener('click', function() {
             stopTraining = false;
             const epochs = parseInt(document.getElementById('epochs').value);
-            const learningRate = parseFloat(document.getElementById('learningRate').value); // Capture the learning rate
+            const learningRate = parseFloat(document.getElementById('learningRate').value);
             fetch('http://127.0.0.1:5000/train', {
                 method: 'POST',
                 headers: {
@@ -95,7 +114,7 @@
                     hiddenLayers: document.getElementById('hiddenLayers').value.split(',').map(Number),
                     outputNodes: parseInt(document.getElementById('outputNodes').value),
                     epochs: epochs,
-                    learningRate: learningRate // Pass the learning rate value
+                    learningRate: learningRate
                 })
             })
             .then(response => response.json())
@@ -179,6 +198,10 @@
                     setTimeout(() => {
                         animateBackwardPass(epochData.backward_data, svg, backwardDuration);
                     }, forwardDuration + 500);
+
+                    // Update the loss display
+                    updateLossDisplay(epochData.loss);
+
                 }, epochIndex * 1000);
             });
         }
@@ -226,6 +249,10 @@
                         }
                     });
             });
+        }
+
+        function updateLossDisplay(loss) {
+            document.getElementById('lossDisplay').textContent = `Loss: ${loss.toFixed(4)}`;
         }
 
         function dragStarted(event, d) {
