--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
         #lossDisplay {
             position: absolute;
-            top: 20px; /* Adjust positioning relative to the neural network diagram */
-            right: 20px; /* Adjust positioning relative to the neural network diagram */
+            top: 20px;
+            right: 20px;
             z-index: 10;
-            background-color: transparent; /* Make the background transparent */
-            border: 2px solid white; /* Add a white outline */
-            padding: 20px; /* Increase padding for a bigger box */
+            background-color: transparent;
+            border: 2px solid white;
+            padding: 20px;
             border-radius: 8px;
             color: #ffffff;
             font-size: 16px;
             font-weight: bold;
-            text-align: center; /* Center the text within the box */
-            pointer-events: none; /* Ensure the box doesn't interfere with interactions */
+            text-align: center;
+            cursor: move; /* Show move cursor */
         }
 
         circle {
@@ -86,10 +86,32 @@
     </div>
 
     <div id="visualization"></div>
-    <div id="lossDisplay">Loss: N/A</div> <!-- Loss display box -->
+    <div id="lossDisplay">Loss: N/A</div>
 
     <script>
         let stopTraining = false;
+        let lossDisplay = document.getElementById("lossDisplay");
+        let isDragging = false;
+        let offsetX, offsetY;
+
+        // Make the loss box draggable
+        lossDisplay.addEventListener('mousedown', function (event) {
+            isDragging = true;
+            offsetX = event.clientX - lossDisplay.getBoundingClientRect().left;
+            offsetY = event.clientY - lossDisplay.getBoundingClientRect().top;
+        });
+
+        document.addEventListener('mousemove', function (event) {
+            if (isDragging) {
+                lossDisplay.style.left = (event.clientX - offsetX) + "px";
+                lossDisplay.style.top = (event.clientY - offsetY) + "px";
+                lossDisplay.style.right = "auto"; // Disable automatic positioning on the right
+            }
+        });
+
+        document.addEventListener('mouseup', function () {
+            isDragging = false;
+        });
 
         document.getElementById('loadNetworkBtn').addEventListener('click', function() {
             const inputNodes = parseInt(document.getElementById('inputNodes').value);
