--- a/index.html
+++ b/index.html
@@ -176,7 +176,28 @@
         });
 
         document.addEventListener('DOMContentLoaded', function() {
-            document.getElementById('loadNetworkBtn').click();
+            // Set default values for the neural network
+            const inputNodes = 3;
+            const hiddenLayers = [4, 3];  // Default hidden layers
+            const outputNodes = 1;
+
+            // Generate default layer structure
+            const layers = [inputNodes, ...hiddenLayers, outputNodes];
+
+            // Set default weights for visualization
+            const defaultWeights = {
+                hidden_weights: Array(4).fill(Array(3).fill(0.5)),  // Adjust to match your network structure
+                hidden_biases: Array(4).fill(0),
+                output_weights: Array(1).fill(Array(3).fill(0.5)),
+                output_biases: Array(1).fill(0)
+            };
+
+            // Draw the neural network with default weights
+            drawNeuralNetwork(layers, defaultWeights);
+        });
+
+        document.getElementById('stopTrainingBtn').addEventListener('click', function() {
+            stopTraining = true;
         });
 
         document.addEventListener('mousemove', function (event) {
@@ -246,13 +267,17 @@
             lossChart.update();
         }
 
-        document.getElementById('loadNetworkBtn').addEventListener('click', function() {
+        document.getElementById('loadNetworkBtn').addEventListener('click', function () {
             const inputNodes = parseInt(document.getElementById('inputNodes').value);
             const hiddenLayers = document.getElementById('hiddenLayers').value.split(',').map(Number);
             const outputNodes = parseInt(document.getElementById('outputNodes').value);
 
             const layers = [inputNodes, ...hiddenLayers, outputNodes];
-            drawNeuralNetwork(layers);
+
+            // Call the draw function with dummy weights if needed
+            const weights = generateDummyWeights(layers); // Ensure you have a function that generates these dummy weights
+
+            drawNeuralNetwork(layers, weights);
         });
 
         document.getElementById('trainNetworkBtn').addEventListener('click', function() {
@@ -273,22 +298,30 @@
                     outputNodes: parseInt(document.getElementById('outputNodes').value),
                     epochs: epochs,
                     learningRate: learningRate,
-                    numDataPoints: numDataPoints,  // Ensure this matches the backend key
-                    noiseLevel: noiseLevel  // Ensure this matches the backend key
+                    numDataPoints: numDataPoints,
+                    noiseLevel: noiseLevel
                 })
             })
             .then(response => response.json())
-            .then(data => animateDataFlow(data))
+            .then(data => {
+                // Pass the actual weights to draw the neural network
+                const weights = data[data.length - 1].weights_biases_data;
+                const layers = [parseInt(document.getElementById('inputNodes').value), 
+                                ...document.getElementById('hiddenLayers').value.split(',').map(Number), 
+                                parseInt(document.getElementById('outputNodes').value)];
+                drawNeuralNetwork(layers, weights);
+                animateDataFlow(data);  // Animate as before
+
+                        // Pass stopTraining check to the animation
+                if (!stopTraining) {
+                    animateDataFlow(data);
+                }
+            })
             .catch(error => console.error('Error:', error));
         });
-
-        document.getElementById('stopTrainingBtn').addEventListener('click', function() {
-            stopTraining = true;
-        });
-
         let nodes = [];
 
-        function drawNeuralNetwork(layers) {
+        function drawNeuralNetwork(layers, weights) {
             d3.select("#visualization").html("");
 
             const width = window.innerWidth;
@@ -330,7 +363,10 @@
                 if (sourceNode.layerIndex > 0) {
                     const prevLayerNodes = nodes.filter(node => node.layerIndex === sourceNode.layerIndex - 1);
 
-                    prevLayerNodes.forEach(targetNode => {
+                    prevLayerNodes.forEach((targetNode, j) => {
+                        // Extract weights from the data returned by the server
+                        const weight = weights[`hidden_weights`][j][sourceNode.i]; // Adjust indexing if needed
+
                         svg.append("line")
                             .attr("x1", targetNode.x)
                             .attr("y1", targetNode.y)
@@ -338,7 +374,22 @@
                             .attr("y2", sourceNode.y)
                             .attr("stroke", "#ccc")
                             .attr("stroke-width", 2)
-                            .attr("class", `line-${sourceNode.layerIndex}-${sourceNode.i}-${targetNode.i}`);
+                            .attr("class", `line-${sourceNode.layerIndex}-${sourceNode.i}-${targetNode.i}`)
+                            .on("mouseover", function () {
+                                d3.select(this).attr("stroke", "yellow").attr("stroke-width", 4);
+                                const tooltip = svg.append("text")
+                                    .attr("x", (targetNode.x + sourceNode.x) / 2)
+                                    .attr("y", (targetNode.y + sourceNode.y) / 2 - 10)
+                                    .attr("fill", "white")
+                                    .attr("font-size", "14px")
+                                    .attr("text-anchor", "middle")
+                                    .text(`Weight: ${weight.toFixed(4)}`);
+
+                                d3.select(this).on("mouseout", function () {
+                                    d3.select(this).attr("stroke", "#ccc").attr("stroke-width", 2);
+                                    tooltip.remove();
+                                });
+                            });
                     });
                 }
             });
@@ -349,15 +400,17 @@
 
             data.forEach((epochData, epochIndex) => {
                 setTimeout(() => {
-                    if (stopTraining) return;
+                    if (stopTraining) return;  // Stop the animation if stopTraining is true
 
                     const forwardDuration = epochData.forward_data.forward_time * 30000;
                     const backwardDuration = epochData.backward_data.backward_time * 30000;
 
                     animateForwardPass(epochData.forward_data, svg, forwardDuration);
                     setTimeout(() => {
+                        if (stopTraining) return;  // Check again before backward pass
                         animateBackwardPass(epochData.backward_data, svg, backwardDuration);
                     }, forwardDuration + 500);
+
                     // Plot loss in real-time
                     updateLossChart(epochData.epoch, epochData.loss);
 
