--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="number" id="inputNodes" value="3" min="1">
 
         <label for="hiddenLayers">Hidden Layers:</label>
-        <input type="text" id="hiddenLayers" value="4,3"> <!-- Comma-separated values for each hidden layer -->
+        <input type="text" id="hiddenLayers" value="3,2"> <!-- Comma-separated values for each hidden layer -->
 
         <label for="outputNodes">Output Nodes:</label>
         <input type="number" id="outputNodes" value="1" min="1">
@@ -25,11 +25,11 @@
         <input type="number" id="epochs" value="1000" min="1">
 
         <label for="learningRate">Learning Rate:</label>
-        <input type="number" id="learningRate" value="0.001" step="0.001" min="0.000001">
+        <input type="number" id="learningRate" value="0.0001" step="0.001" min="0.000001">
 
         <h3>Data</h3>
         <label for="numDataPoints">Number of Data Points:</label>
-        <input type="number" id="numDataPoints" value="10" min="1">
+        <input type="number" id="numDataPoints" value="100" min="1">
 
         <label for="noiseLevel">Noise Level:</label>
         <input type="number" id="noiseLevel" value="0.1" step="0.01" min="0">
@@ -37,6 +37,7 @@
         <button id="loadNetworkBtn">Load Neural Network</button>
         <button id="trainNetworkBtn">Train Neural Network</button>
         <button id="stopTrainingBtn">Stop Training</button>
+        <button id="resetAllBtn">Reset All</button>
     </div>
 
     <!-- Neural network diagram area -->
