--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         <label for="epochs">Epochs:</label>
         <input type="number" id="epochs" value="1000" min="1">
 
+        <label for="batchSize">Batch Size</label>
+        <input type="number" id="batchSize" value="16" min="1"> <!-- Default value 1 -->
+
         <label for="learningRate">Learning Rate:</label>
-        <input type="number" id="learningRate" value="0.0001" step="0.001" min="0.000001">
+        <input type="number" id="learningRate" value="0.001" step="0.001" min="0.000001">
 
         <h3>Data</h3>
         <label for="numDataPoints">Number of Data Points:</label>
