--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div id="lossDisplay">
         <canvas id="lossChart"></canvas>
         <button id="expandBtn"><></button>
+        <div id="lossValue" class="loss-value"></div>
     </div>
 
     <!-- Load the necessary libraries and scripts -->
