--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <div id="lossValue" class="loss-value"></div>
     </div>
 
-    <div id="gradientMapContainer"></div>
+    <div id="gradientMapContainer">
+        <button id="expandGradientBtn"><></button>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Chart.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script> <!-- D3.js -->
