--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="controls">
+        <div id="sidebar-toggle">&#9776;</div>
         <h3>Neural Network</h3>
         <div class="input-group">
             <label for="frameworkSelect">Framework:</label>
