--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <script type="module" src="src/scripts/main.js"></script>
     <script src="src/scripts/gradiant.js"></script>
-    <script type="module" src="src/scripts/chart-logic.js"></script>
+    <script type="module" src="src/scripts/charts/loss-chart.js"></script>
     <script type="module" src="src/scripts/event-handlers.js"></script>
     <script type="module" src="src/scripts/network-visualization.js"></script>
 </body>
