--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="inputNodes">Input Nodes:</label>
             <div class="number-input">
                 <button class="decrement">-</button>
-                <input type="number" id="inputNodes" value="4" min="1">
+                <input type="number" id="inputNodes" value="4" min="1" max="4">
                 <button class="increment">+</button>
             </div>
         </div>
